# value-consulting-agents

./: .gitignore  CHANGELOG.md  CLAUDE.md  requirements.txt
.claude/: launch.json
deal-pricing-system/: .env.example  pyproject.toml
deal-pricing-system/deals/: DEAL-053CBE9B.json  DEAL-053CBE9B_package.json  DEAL-4AD79C5C.json  DEAL-4AD79C5C_package.json  HNB_Commercial_Proposal.html  HNB_Commercial_Proposal.md  HNB_Commercial_Proposal_Slides.html  HNB_Negotiation_Bank_Lending.html  HNB_Revised_Pricing_Scenarios.xlsx  Quote_Data.xlsx  cih_bank_morocco.json  hatton_national_bank_sri_lanka.json
deal-pricing-system/examples/: sample_deal_new_logo.json  sample_deal_retail_renewal.json
deal-pricing-system/knowledge_base/ai_agents/: commercial.json  retail.json  wealth.json
deal-pricing-system/knowledge_base/ai_pricing/: bic_reference.json  pillar_definitions.json
deal-pricing-system/knowledge_base/benchmarks/: construct_patterns.json  segment_benchmarks.json
deal-pricing-system/knowledge_base/products/: add_ons.md  assist.md  digital_banking.md  editions_2025.md  lending.md  onboarding.md
deal-pricing-system/knowledge_base/templates/: ai_pricing_playbook.md  ai_pricing_rationale_template.md  deal_constructs.md  negotiation_best_practices.md
deal-pricing-system/src/deal_pricing/: __init__.py  cli.py  config.py  orchestrator.py  sdk_client.py
deal-pricing-system/tests/: conftest.py  test_ai_pricing.py  test_financial_engine.py  test_knowledge_loader.py  test_models.py  test_output.py
deal-pricing-system/tools/: ai_pricing_stress_report.py
(+135 files in other folders)
